--- a/app.json
+++ b/app.json
@@ -3,5 +3,5 @@
   "version": "1.0.1",
   "author": "Chung Nguyen",
   "company": "Thaco Group",
-  "url": ""
+  "url": "https://github.com/ducchungtx/th-kaizen-app/blob/master/thaco5s.apk?raw=true"
 }
