Update txt file to note version

--- a/app.json
+++ b/app.json
@@ -3,5 +3,6 @@
   "version": "1.0.1",
   "author": "Chung Nguyen",
   "company": "Thaco Group",
-  "url": "https://github.com/ducchungtx/th-kaizen-app/blob/master/thaco5s.apk?raw=true"
+  "url": "https://github.com/ducchungtx/th-kaizen-app/blob/master/thaco5s.apk?raw=true",
+  "description": "Ứng dụng quản lý, đánh giá 5s"
 }
