Update file version

--- a/app.json
+++ b/app.json
@@ -4,5 +4,6 @@
   "author": "Chung Nguyen",
   "company": "Thaco Group",
   "url": "https://github.com/ducchungtx/th-kaizen-app/blob/master/thaco5s.apk?raw=true",
+  "fileName": "thaco5s.apk",
   "description": "Ứng dụng quản lý, đánh giá 5s"
 }
