--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "appName": "Thaco 5s",
-  "version": "1.0.1",
+  "version": "1.0.2",
+  "versionCode": 2,
   "author": "Chung Nguyen",
   "company": "Thaco Group",
   "url": "https://github.com/ducchungtx/th-kaizen-app/blob/master/thaco5s.apk?raw=true",
